More spacing corrections

--- a/js/sider/KoronaComponents/datepicker-extended.less
+++ b/js/sider/KoronaComponents/datepicker-extended.less
@@ -5,7 +5,7 @@
     border: 1px solid #78706a;
     box-sizing: border-box;
     line-height: 1.375rem;
-    width: 15rem;
+    width: 13rem;
 }
 
 .flatpickr-icon {
